<resources>
    <string name="app_name">AppListaVip</string>
    <string name="txt_titulo">App Lista VIP Curso Android</string>
    <string name="txt_hint_edit_primeiro_nome">Primeiro nome</string>
    <string name="txt_hint_edit_sobrenome">Sobrenome</string>
    <string name="txt_hint_edit_nome_do_curso">Nome do curso</string>
    <string name="txt_hint_edit_telefone">telefone</string>
    <string name="txt_button_limpar">LIMPAR</string>
    <string name="txt_button_salvar">SALVAR</string>
    <string name="txt_button_finalizar">FINALIZAR</string>
</resources>